Fixed the header to align with the main content body.

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,16 +6,22 @@
 	margin-top: 30px;
 	margin-bottom: 30px;
 	/*height: 500px; */
-	padding: 10px;
+	padding: 10px; 
 	line-height: 1.5em;
 }
 
 div {
-	width: 950px;
+	width: 960px;
 	margin-left: auto;
 	margin-right: auto;
+
 	
 }
+
+header div {
+	width: 980px;
+}
+
 h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-weight: bold;
@@ -28,8 +34,9 @@ a {
 
 header {
 	background-color: #ffffff;
-	height: 50px;
+	height: 75px;
 	border-bottom: 5px solid #cccccc;
+	
 }
 body {
 	background-color: #dddddd;
@@ -51,19 +58,22 @@ img {
 
 .name {
 	float: left;
-	margin-left: auto;
+	/*margin-left: auto; */
 	color: #ffffff;
 	background-color: #4aaaa5;
-	height: 30px;
+	height: 50px;
 	font-size: 24px;
-	padding: 10px;
-	border-left: 10px solid  #4aaaa5;
-	border-right: 10px solid  #4aaaa5;
+	padding-top: 25px;
+	padding-right: 15px;
+	padding-left: 15px;
+	
+	/*border-left: 10px solid  #4aaaa5;
+	border-right: 10px solid  #4aaaa5; */
 }
 .headerlinks {
 	float: right;
 	font-weight: bold;
-	padding-top: 15px;
+	padding-top: 30px;
 }
 .MainAboutMe {
 	color: #4aaaa5;
@@ -75,9 +85,13 @@ img {
 }
 footer {	
 	background-color: #666666;	
-	height: 50px;
+	height: 40px;
 	border-top: solid 5px #4aaaa5;
 	text-align: center;
 	color: #dddddd;
 	padding-top: 15px;
+}
+
+footer div p {
+	padding-top: 20px;
 }
